--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 </ol>
 
 <h2 id="注意">注意</h2>
-
-<p>表示された画像のフォントがおかしい場合は少し待ってからもう一度画像生成ボタンを押してみてください</p>
+<p>表示された画像のフォントがおかしい場合は、もう一度画像生成ボタンを押してみてください</p>
+<font face="NicoMoji">NicoMoji</font>
+<font face="MPLUSRounded1c">MPLUSRounded1c</font>
+<p>↑ のフォントが読み込めているなら多分大丈夫かも？</p>
 
 <h2 id="splatoon2-weapon-ranking-maker">Splatoon2 Weapon Ranking Maker</h2>
 <h4 id="タイトル">タイトル</h4>
 <form name="titleForm">
-    <input type="text" name="titleInput" maxlength="12" placeholder="スプラシューター" />
+    <input type="text" name="titleInput" maxlength="15" placeholder="スプラシューター" />
 </form>
 
 <h4 id="シーズン">シーズン</h4>
