タイトルの文字数制限緩和 生成画像に対し、URL表示追加

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <p>表示された画像のフォントがおかしい場合は、もう一度画像生成ボタンを押してみてください</p>
 <font face="NicoMoji">NicoMoji</font>
 <font face="MPLUSRounded1c">MPLUSRounded1c</font>
-<p>↑ のフォントが読み込めているなら多分大丈夫かも？</p>
+<p>↑ のフォントが読み込めているかどうかを目安にしてください</p>
 
 <h2 id="splatoon2-weapon-ranking-maker">Splatoon2 Weapon Ranking Maker</h2>
 <h4 id="タイトル">タイトル</h4>
 <form name="titleForm">
-    <input type="text" name="titleInput" maxlength="15" placeholder="スプラシューター" />
+    <input type="text" name="titleInput" maxlength="30" placeholder="スプラシューター" />
 </form>
 
 <h4 id="シーズン">シーズン</h4>
