--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="https://boomxch.github.io/Splatoon2WeaponRanking/assets/css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165382832-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-165382832-1');
+    </script>
 
 <!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Splatoon2 Weapon Ranking Maker | Splatoon2のX帯500傑のブキ種別ランキングを生成するサイト</title>
