--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         
-        <p class="copyright">Splatoon2 Weapon Ranking Maker maintained by <a href="https://twitter.com/sisno_boomx" target="_blank">@sisno_boomx</a></p>
+        <p>Splatoon2 Weapon Ranking Maker maintained by <a href="https://twitter.com/sisno_boomx" target="_blank">@sisno_boomx</a></p>
         
       </footer>
     </div>
