--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       <footer class="inner">
         
         <p>Splatoon2 Weapon Ranking Maker maintained by <a href="https://twitter.com/sisno_boomx" target="_blank">@sisno_boomx</a></p>
+        <p>Splatoon2WeaponRanking is not endorsed by Nintendo and doesn’t reflect the views or opinions of Nintendo or anyone officially involved in producing or managing Splatoon2. Splatoon2 and Nintendo are trademarks or registered trademarks of Nintendo. Splatoon2 © Nintendo</p>
         
       </footer>
     </div>
