--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/share.css" />
     <link href="assets/css/slimbox2.css" type="text/css" rel="stylesheet" media="screen" />
-    <script type="text/javascript" src="script/selecter.js"></script>
+    <script type="text/javascript" src="script/selector.js"></script>
     <script type="text/javascript" src="script/canvas.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="script/slimbox2.js"></script>
